# Molecular-Dynamics-high-performance-computing-with-cpp-

./: .clang-format  .gitignore  .~lock.notes.odt#  CMakeLists.txt  README.md  lj_direct_summation.cpp  lj_direct_summation.h  notes.odt  types.h  verlet.cpp  verlet.h
Report/latex/: Makefile  References.bib  report_main.tex  setup.tex  todo_list.tex
Report/latex/chapters/: 0_0-titlepage_en.tex  1-introduction.tex  2-methods.tex  2-relatedwork.tex  3-Implementation.tex  3-background.tex  4-approach.tex  4-results.tex  5-conclusions.tex  7-acknowledgments.tex
Report/latex/figures/experiments/: tabAccuracy.tex
architectures/: architecture
archive/10/: 10_energies.csv
archive/3871/: 3871_energies.csv
archive/8/: 8_energies.csv
archive/9/: 9_energies.csv
archive/923/: 923_energies.csv
archive/milestone_07/923/: average_temps_923.txt  potential_energies_923.txt  total_energies_923.txt
clusters/: cluster_10179.xyz  cluster_12431.xyz  cluster_1415.xyz  cluster_14993.xyz  cluster_17885.xyz  cluster_2869.xyz  cluster_3871.xyz  cluster_5083.xyz  cluster_55.xyz  cluster_561.xyz  cluster_6525.xyz  cluster_8217.xyz  ih.c  mackay
cmake/: Eigen3.cmake  tools.cmake
data/: lj54.xyz
include/Molecular-Dynamics/: atoms.h  domain.h  energy.h  gupta.h  ih.h  lj_direct_summation.h  mpi_support.h  neighbors.h  simulation.h  simulation_data.h  types.h  utils.h  vector.h  verlet.h  xyz.h
milestones/: CMakeLists.txt
milestones/04/: CMakeLists.txt  main.cpp
milestones/05/: CMakeLists.txt  main.cpp
milestones/06/: CMakeLists.txt  main.cpp
milestones/07/: CMakeLists.txt  cluster_923.xyz  main.cpp
milestones/08/: CMakeLists.txt  main.cpp
output/: traj.xyz  traj_2.xyz
output/milestone_04/: energies_vs_time_step.csv  milestone4.py  traj.xyz
output/milestone_05/: milestone5.py  simulation_time_vs_atoms_number.csv  simulation_time_vs_cluster_size.csv  traj.xyz
output/milestone_06/: simulation_time_vs_atoms_number.csv  traj.xyz
output/milestone_07/: average_temps_923.txt  melting_points_vs_cluster_size.csv  milestone7.py
output/milestone_07/10/: 10_energies.csv
output/milestone_07/11/: 11_energies.csv
output/milestone_07/12/: 12_energies.csv
output/milestone_07/3/: 3_energies.csv
output/milestone_07/3871/: average_temps_3871.txt  potential_energies_3871.txt  total_energies_3871.txt
output/milestone_07/4/: 4_energies.csv
output/milestone_07/5/: 5_energies.csv
output/milestone_07/561/: average_temps_561.txt  potential_energies_561.txt  total_energies_561.txt  traj_561.xyz
output/milestone_07/6/: 00000000000000000000 parameters and output.txt  6_energies.csv
output/milestone_07/7/: 3871_energies.csv  7_energies.csv  parameters and terminal output.txt
output/milestone_07/8/: 8_energies.csv
output/milestone_07/9/: 9_energies.csv
output/milestone_07/923/: 923_energies.csv  potential_energies_923.txt  total_energies_923.txt  traj_923.xyz
output/milestone_08/: cores and total time 3871.txt  cores and total time 923.txt  cores and total time.txt  equilibrium_on_923_atoms.csv  milestone8.py
output/milestone_08/923/: 1_energies.csv  2_energies.csv  4_energies.csv  8_energies.csv  equilibrium_on_923_atoms.csv  equilibrium_on_923_atoms.txt
src/: domain.cpp  energy.cpp  gupta.cpp  ih.cpp  lj_direct_summation.cpp  main.cpp  neighbors.cpp  simulation.cpp  simulation_data.cpp  verlet.cpp  xyz.cpp
tests/: CMakeLists.txt  test_berendsen_thermostat.cpp  test_gupta.cpp  test_hello_world.cpp  test_lj_direct_summation.cpp  test_neighbors.cpp  test_verlet.cpp
